Momentpicker [FIX] Vertical align

--- a/scss/core/elements/_input.momentpicker.scss
+++ b/scss/core/elements/_input.momentpicker.scss
@@ -32,7 +32,7 @@
 			> .separator,
 			> .moment.input {
 				display: inline-block;
-				vertical-align: middle;
+				vertical-align: baseline;
 			}
 			> .moment.input {
 				position: relative;
